# demo

backend-service/: Dockerfile  README.MD  pyproject.toml
backend-service/azure-pipelines/: backend-pipeline.yaml  deploy-stage-template.yaml  variables.yml
backend-service/helm/: Chart.yaml  values-prod.yaml  values-stage.yaml  values.yaml
backend-service/helm/templates/: deployment.yaml  hpa.yaml  service.yaml
backend-service/src/: start_api.py
backend-service/src/api/: __init__.py  config.py  routes.py
backend-service/src/test/: test_api.py
frontend-service/: Dockerfile  README.MD  package-lock.json  package.json  server.js
frontend-service/azure-pipelines/: frontend-pipeline.yaml  variables.yml
frontend-service/helm/: Chart.yaml  values-prod.yaml  values-stage.yaml  values.yaml
frontend-service/helm/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml
frontend-service/public/: index.html  scripts.js
infra/: azure-pipeline.yml  backend.tf  main.tf  outputs.tf  variables.tf
infra/environments/: dev.tfvars  prod.tfvars  stage.tfvars
infra/modules/acr/: main.tf  outputs.tf  variables.tf
infra/modules/aks/: main.tf  outputs.tf  variables.tf
infra/modules/kv/: main.tf  outputs.tf  variables.tf
infra/modules/network/: main.tf  output.tf  variables.tf
shared/: deploy-stage-template.yaml
