[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "backend-service"
version = "0.1.0"
description = "Simple flask api"

dependencies = [
    "blinker==1.9.0",
    "click==8.1.8",
    "colorama==0.4.6",
    "exceptiongroup==1.2.2",
    "Flask==3.1.0",
    "Flask-Cors==5.0.0",
    "iniconfig==2.0.0",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.5",
    "MarkupSafe==3.0.2",
    "packaging==24.2",
    "pluggy==1.5.0",
    "pytest==8.3.4",
    "tomli==2.2.1",
    "Werkzeug==3.1.3"
]